# winstng

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Install.cmd  Jenkinsfile  README-winst.txt  README.md  build-openssl.cmake  bzip2.patch  cmake-2.8.4-rc1.patch  configure-openssl.cmake  freetype-2.3.12.patch  gd.patch  genasm-openssl.cmake  install-openssl.cmake  jpeg8.patch  libharu-2.2.1-cmake.patch  libharu-2.3.0RC2.patch  mysql++-3.1.0.patch  openssl-1.0.0c.patch  run-example  run-example.bat  unzip.vbs  winst  winst.bat  winst.sh  wt-3.1.7a.patch  wt-git.patch
cmake/: CMakeLists.txt  Copyright.txt  ReadMe.txt  build-openssl.cmake  build-skia.bat  configure-openssl.cmake  configure-skia.bat  example-cmakelists-prefix.txt  execute-with-path.bat  execute-with-path.cmake  genasm-openssl.cmake  install-openssl.cmake  install-postgres-headerfiles.bat  postgresql-11.1-config_default.pl.cmake  postgresql-9.3.1-config_default.pl.cmake
cmake/Modules/: FindOpenSSL.cmake  FindPNG.cmake  FindZLIB.cmake
patches/: 0001-we-only-need-Boost-if-we-re-using-Boost.Asio-or-if-W.patch  boost-1.53-vc12.patch  boost-1.70-cmake.patch  freetype-2.5.0.1.diff  graphicsmagick.exe.manifest  libharu-2.3.0.patch  libharu-2.3.0RC2.patch  libharu-2.3.0RC3.patch  libharu-2.4.2.patch  mariadb-native-client.patch  openssl-1.0.1e.patch  openssl-debug.conf  openssl-library-names.patch  postgresql-9.3.1.patch  postgresql-9.5.1.patch  postgresql-9.6.1.patch  wt-3.3.0.patch  wt-3.3.1-msvc2013.patch  wt-3.3.1rc2.patch  wt-3.3.5-rc2.patch  wt-4.3.0-rc1.patch  wt3_static_mariadbclient.patch  wt_static_mariadbclient.patch
